--- a/app/src/main/res/layout/activity_photo_capture.xml
+++ b/app/src/main/res/layout/activity_photo_capture.xml
@@ -33,6 +33,7 @@
         android:layout_marginRight="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:onClick="takePicture"
         android:text="Take Picture"
         android:textColor="@color/colorAccent"
         android:textStyle="normal"
