--- a/app/src/main/res/layout/activity_photo_capture.xml
+++ b/app/src/main/res/layout/activity_photo_capture.xml
@@ -33,8 +33,8 @@
         android:layout_marginRight="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:onClick="takePicture"
-        android:text="Take Picture"
+        android:onClick="takePhoto"
+        android:text="Take Photo"
         android:textColor="@color/colorAccent"
         android:textStyle="normal"
         app:layout_constraintBottom_toBottomOf="parent"
