--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,27 +6,28 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="149dp"
-        android:layout_height="wrap_content"
+    <ImageButton
+        android:id="@+id/imageView"
+        android:layout_width="110dp"
+        android:layout_height="114dp"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:background="@drawable/camera"
         android:onClick="dispatchTakePictureIntent"
-        android:text="Take Photo"
         android:textColor="@color/colorAccent"
         android:textStyle="normal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.625" />
+        app:layout_constraintVertical_bias="0.61" />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="272dp"
+        android:layout_width="283dp"
         android:layout_height="66dp"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
